add_executable(asio_chat_server server.cc)
target_include_directories(asio_chat_server PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(asio_chat_server Net::lib)

add_executable(asio_chat_client client.cc)
target_include_directories(asio_chat_client PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(asio_chat_client Net::lib)

add_executable(asio_chat_server_threaded server_threaded.cc)
target_include_directories(asio_chat_server_threaded PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(asio_chat_server_threaded Net::lib)

add_executable(asio_chat_loadtest loadtest.cc)
target_include_directories(asio_chat_loadtest PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(asio_chat_loadtest Net::lib)

add_executable(asio_chat_server_threaded_efficient server_threaded_efficient.cc)
target_include_directories(asio_chat_server_threaded_efficient PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(asio_chat_server_threaded_efficient Net::lib)

add_executable(asio_chat_server_threaded_highperformance server_threaded_highperformance.cc)
target_include_directories(asio_chat_server_threaded_highperformance PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(asio_chat_server_threaded_highperformance Net::lib)