add_executable(Asio_chat_server server.cc)
target_include_directories(Asio_chat_server PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(Asio_chat_server Net::lib)

add_executable(Asio_chatclient client.cc)
target_include_directories(Asio_chatclient PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(Asio_chatclient Net::lib)

add_executable(Asio_chatserver_threaded server_threaded.cc)
target_include_directories(Asio_chatserver_threaded PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(Asio_chatserver_threaded Net::lib)

add_executable(Asio_chatloadtest loadtest.cc)
target_include_directories(Asio_chatloadtest PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(Asio_chatloadtest Net::lib)

add_executable(Asio_chatserver_threaded_efficient server_threaded_efficient.cc)
target_include_directories(Asio_chatserver_threaded_efficient PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(Asio_chatserver_threaded_efficient Net::lib)

add_executable(Asio_chatserver_threaded_highperformance server_threaded_highperformance.cc)
target_include_directories(Asio_chatserver_threaded_highperformance PUBLIC ${CMAKE_SOURCE_DIR})
target_link_libraries(Asio_chatserver_threaded_highperformance Net::lib)